--- a/pipeline.conf
+++ b/pipeline.conf
@@ -16,6 +16,11 @@ filter {
     date {
       match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
     }
+    mutate {
+      gsub => [
+        "[nginx][access][request_body]", "\\x22", '"'
+      ]
+    }
   }
 }
 
