fix the issue with structuing data from access.log and error.log. parse json from requestbody.

--- a/pipeline.conf
+++ b/pipeline.conf
@@ -5,12 +5,24 @@ input {
 }
 
 filter {
-  if [type] == "nginx-request-body" {
+  if [fileset][module] == "nginx" {
     grok {
       patterns_dir => ["/usr/share/logstash/pipeline/patterns"]
       match => {
         "message" =>
-          ["%{IP_LIST:[nginx][access][remote_ip_list]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent.bytes]} \"%{DATA:[nginx][access][referrer]}\" \"%{DATA:[nginx][access][agent]}\" \|%{DATA:[nginx][access][request_body]}\|"]
+          ["%{IP_LIST:[nginx][access][remote_ip_list]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent.bytes]} \"%{DATA:[nginx][access][referrer]}\" \"%{DATA:[nginx][access][agent]}\""]
+      }
+    }
+    date {
+      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+    }
+  }
+  else if [type] == "nginx-request-body" {
+    grok {
+      patterns_dir => ["/usr/share/logstash/pipeline/patterns"]
+      match => {
+        "message" =>
+          ["%{IP_LIST:[nginx][access][remote_ip_list]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\] \"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent.bytes]} \"%{DATA:[nginx][access][referrer]}\" \"%{DATA:[nginx][access][agent]}\" \|%{DATA:[nginx][access][request_body][raw]}\|"]
       }
     }
     date {
@@ -18,8 +30,12 @@ filter {
     }
     mutate {
       gsub => [
-        "[nginx][access][request_body]", "\\x22", '"'
+        "[nginx][access][request_body][raw]", "\\x22", '"'
       ]
+    }
+    json {
+      source => "[nginx][access][request_body][raw]"
+      target => "[nginx][access][request_body][json]"
     }
   }
 }
